Making it more friendly user

--- a/index.html
+++ b/index.html
@@ -92,12 +92,23 @@
       <div class="featured-grid">
         <div class="featured-item animate-fade-in" style="animation-delay: 0.2s">
           <div class="featured-image-container">
-            <img
-              src="Cakes pics/cake1.jpeg"
-              alt="Butter Croissant"
-            />
+            <div class="carousel" data-carousel>
+              <button class="carousel-btn prev" type="button" aria-label="Previous image" data-prev>‹</button>
+
+              <div class="carousel-track" data-track>
+                <img src="Cakes pic/cake1.jpeg" alt="Birthday Cakes 1"/>
+                <img src="Cakes pic/cake2.jpeg" alt="Birthday Cakes 2"/>
+                <img src="Cakes pic/cake3.jpeg" alt="Birthday Cakes 3"/>
+                <img src="Cakes pic/cake4.jpeg" alt="Birthday Cakes 4"/>
+                <img src="Cakes pic/cake5.jpeg" alt="Birthday Cakes 5"/>
+              </div>
+
+              <button class="carousel-btn next" type="button" aria-label="Next image" data-next>›</button>
+            </div>
+
             <div class="price-tag"><span>$4.50</span></div>
           </div>
+
           <div class="featured-content">
             <h3 class="featured-name">Birthday Cakes</h3>
             <p class="featured-description">Flaky, golden layers of pure buttery bliss</p>
@@ -107,8 +118,8 @@
         <div class="featured-item animate-fade-in" style="animation-delay: 0.3s">
           <div class="featured-image-container">
             <img
-              src="Cakes pics/cupcake1.jpeg"
-              alt="Artisan Sourdough"
+              src="Cakes pic/cupcake1.jpeg"
+              alt="Vanilla Cupcake"
             />
             <div class="price-tag"><span>$8.00</span></div>
           </div>
@@ -121,13 +132,13 @@
         <div class="featured-item animate-fade-in" style="animation-delay: 0.4s">
           <div class="featured-image-container">
             <img
-              src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?w=600&q=80"
-              alt="Chocolate Chip Cookies"
+              src="Cakes pic/carrot-cake1.jpeg"
+              alt="Carrot cake"
             />
             <div class="price-tag"><span>$3.00</span></div>
           </div>
           <div class="featured-content">
-            <h3 class="featured-name">Chocolate Chip Cookies</h3>
+            <h3 class="featured-name">Carrot Cake</h3>
             <p class="featured-description">Crisp edges, gooey center, pure comfort</p>
           </div>
         </div>
@@ -135,13 +146,13 @@
         <div class="featured-item animate-fade-in" style="animation-delay: 0.5s">
           <div class="featured-image-container">
             <img
-              src="https://images.unsplash.com/photo-1509365465985-25d11c17e812?w=600&q=80"
-              alt="Cinnamon Rolls"
+              src="Cakes pic/cheesecake3.jpeg"
+              alt="Cheesecake"
             />
             <div class="price-tag"><span>$5.50</span></div>
           </div>
           <div class="featured-content">
-            <h3 class="featured-name">Cinnamon Rolls</h3>
+            <h3 class="featured-name">Cheesecake</h3>
             <p class="featured-description">Warm swirls topped with cream cheese frosting</p>
           </div>
         </div>
