--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </svg>
           </div>
           <h3>Visit Us</h3>
-          <p>8285 Ibis Club Dr<br />Naples, FL 34104</p>
+          <p>8242 Golden Gate Dr<br />Orlando, FL 34121</p>
         </div>
 
         <div class="info-card">
@@ -247,7 +247,7 @@
             </svg>
           </div>
           <h3>Call Us</h3>
-          <p>(239) 269-3520<br />(239) 784-1766</p>
+          <p>(239) 269-4530<br />(239) 784-5634</p>
         </div>
 
         <div class="info-card">
@@ -257,7 +257,7 @@
             </svg>
           </div>
           <h3>Email Us</h3>
-          <p>ffulcar@hotmail.com<br />hrehenry29@gmail.com</p>
+          <p>cookingmom@hotmail.com<br />sonxx@gmail.com</p>
         </div>
 
         <div class="info-card">
